--- a/src/app/task/task-detail/task-detail.component.html
+++ b/src/app/task/task-detail/task-detail.component.html
@@ -1,3 +1,6 @@
+
+<div class="container">
+    
 <h2>Task Details</h2>
 
 
@@ -17,4 +20,4 @@
     </div>
 
     <button>Back to Task List</button>
-</div>
+</div></div>
