--- a/src/app/task/task-detail/task-detail.component.html
+++ b/src/app/task/task-detail/task-detail.component.html
@@ -19,5 +19,5 @@
         <span>Status:</span> {{ task.status }}
     </div>
 
-    <button>Back to Task List</button>
+    <a href="/tasks">Back to Task List</a>
 </div></div>
